# 2017carhackingvillagebadge

./: README.md
DC2017/: CMakeLists.txt  DC2017.cmake  DC2017.depend  DC2017.ebp  DC2017.elay  DC2017_Debug.ld  DC2017_Debug_library.ld  DC2017_Debug_memory.ld  README.txt
DC2017/Src/CMSIS/: MK63F12.h  MK63F12_features.h  fsl_device_registers.h  system_MK63F12.c  system_MK63F12.h
DC2017/Src/Debug/: DC2017.axf  DC2017_Debug.ld  DC2017_Debug_library.ld  DC2017_Debug_memory.ld  makefile  sources.mk
DC2017/Src/Debug/CMSIS/: subdir.mk
DC2017/Src/Debug/drivers/: subdir.mk
DC2017/Src/Debug/freertos/: subdir.mk
DC2017/Src/Debug/source/: subdir.mk
DC2017/Src/Debug/startup/: subdir.mk
DC2017/Src/Debug/utilities/: subdir.mk
DC2017/Src/accel/: accel.c  accel.h
DC2017/Src/can/: can.c  can.h
DC2017/Src/demos/EOL/: eol.c
DC2017/Src/demos/dc2017/: dc2017_main.c
DC2017/Src/demos/dc2017/resources/: NXP.c  NXP.xml  bat_25.c  bat_25.xml  bat_50.c  bat_50.xml  bat_75.c  bat_75.xml  bat_chrg.c  bat_chrg.xml  bat_empty.c  bat_empty.xml  bat_full.c  bat_full.xml  rapid7.c
DC2017/Src/drivers/: fsl_adc16.c  fsl_adc16.h  fsl_clock.c  fsl_clock.h  fsl_cmp.c  fsl_cmp.h  fsl_cmt.c  fsl_cmt.h  fsl_common.c  fsl_common.h  fsl_crc.c  fsl_crc.h  fsl_dac.c  fsl_dac.h  fsl_dmamux.c  fsl_dmamux.h  fsl_dspi.c  fsl_dspi.h  fsl_dspi_edma.c  fsl_dspi_freertos.c  fsl_dspi_freertos.h  fsl_edma.c  fsl_edma.h  fsl_enet.c  fsl_enet.h  fsl_ewm.c  fsl_ewm.h  fsl_flash.c  fsl_flash.h  fsl_flexbus.c  fsl_flexbus.h  fsl_flexcan.c  fsl_flexcan.h  fsl_ftm.c  fsl_ftm.h  fsl_gpio.c  fsl_gpio.h  fsl_i2c.c  fsl_i2c.h  fsl_i2c_freertos.c  (+36 more)
DC2017/Src/enet/: fsl_phy.c  fsl_phy.h  lwip_tcpecho_freertos.c
DC2017/Src/freertos/: ChangeLogKSDK.txt  FreeRTOS.h  FreeRTOSConfig.h  FreeRTOS_for_Kinetis_SDK_v2.0.txt  freertos_tasks_c_additions.h  fsl_tickless_generic.h  fsl_tickless_lptmr.c  fsl_tickless_systick.c  port.c  task.h  tasks.c
DC2017/Src/include/: cpu.h  datatypes.h
DC2017/Src/led/: led.c  led.h
DC2017/Src/lwip_2.0.0/: ChangeLogKSDK.txt
DC2017/Src/lwip_2.0.0/contrib/apps/ping/: ping.c
DC2017/Src/lwip_2.0.0/contrib/apps/udpecho/: udpecho.c
DC2017/Src/lwip_2.0.0/port/: ethernetif.c  ethernetif.h  lwipopts.h  sys_arch.c
DC2017/Src/lwip_2.0.0/port/arch/: cc.h  sys_arch.h
DC2017/Src/lwip_2.0.0/src/apps/httpsrv/: httpsrv.c  httpsrv.h  httpsrv_base64.c  httpsrv_base64.h  httpsrv_config.h  httpsrv_fs.c  httpsrv_fs.h  httpsrv_fs_data.c  httpsrv_port.h  httpsrv_prv.h  httpsrv_script.c  httpsrv_script.h  httpsrv_sha1.c  httpsrv_sha1.h  httpsrv_supp.c  httpsrv_supp.h  httpsrv_task.c  httpsrv_tls.c  httpsrv_tls.h  httpsrv_utf8.c  httpsrv_utf8.h  httpsrv_ws.c  httpsrv_ws.h  httpsrv_ws_api.c  httpsrv_ws_prv.h
DC2017/Src/lwip_2.0.0/src/core/ipv4/: icmp.c  igmp.c
DC2017/Src/lwip_2.0.0/src/include/lwip/: ip4_addr.h  opt.h
DC2017/Src/lwip_2.0.0/src/netif/: slipif.c
DC2017/Src/lwip_2.0.0/src/netif/ppp/: lwip_ecp.c
DC2017/Src/oled/: font_large.c  font_large.xml  font_medium.c  font_medium.xml  font_small.c  font_small.xml  graphics.c  graphics.h  oled.c  oled.h  resources.h
DC2017/Src/oled/lcd-image-converter/: font.tmpl  image.tmpl  readme.txt
DC2017/Src/power/: power.c  power.h
DC2017/Src/sdcard/: event.c  ffconf.h  fsl_host.c  sdcard_fatfs.c
DC2017/Src/sdcard/fatfs_0.12b/: ChangeLogKSDK.txt  FatFs_for_Kinetis_SDK_v2.0_readme.txt
DC2017/Src/sdcard/fatfs_0.12b/src/: diskio.c  diskio.h  ff.h
DC2017/Src/sdcard/fatfs_0.12b/src/fsl_sd_disk/: fsl_sd_disk.c  fsl_sd_disk.h
DC2017/Src/sdcard/sdmmc_2.1.2/inc/: fsl_card.h  fsl_host.h  fsl_sdmmc.h  fsl_specification.h
DC2017/Src/sdcard/sdmmc_2.1.2/port/: event.h
DC2017/Src/sdcard/sdmmc_2.1.2/port/sdhc/freertos/: event.c  fsl_host.c
DC2017/Src/sdcard/sdmmc_2.1.2/port/sdhc/interrupt/: fsl_host.c
DC2017/Src/sdcard/sdmmc_2.1.2/port/sdhc/polling/: event.c  fsl_host.c
DC2017/Src/sdcard/sdmmc_2.1.2/src/: fsl_sd.c  fsl_sdmmc.c
DC2017/Src/source/: DC2017.c  board.c  board.h  clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
DC2017/Src/startup/: startup_mk63f12.c
DC2017/Src/usb/class/: usb_device_cdc_acm.c  usb_device_cdc_acm.h  usb_device_ch9.c  usb_device_ch9.h  usb_device_config.h  usb_device_descriptor.c  usb_device_descriptor.h  virtual_com.c  virtual_com.h
DC2017/Src/usb/stack/device/: usb_device.h  usb_device_dci.c  usb_device_dci.h  usb_device_khci.c  usb_device_khci.h
DC2017/Src/usb/stack/include/: usb.h  usb_khci.h  usb_misc.h  usb_spec.h
DC2017/Src/usb/stack/osa/: usb_osa.h  usb_osa_bm.c  usb_osa_bm.h  usb_osa_freertos.c  usb_osa_freertos.h
DC2017/Src/utilities/: fsl_debug_console.c  fsl_debug_console.h  stdio_emb.c  stdio_emb.h
DC2017_S32/: CMakeLists.txt  DC2017_S32.cmake  DC2017_S32.depend  DC2017_S32.ebp  DC2017_S32.elay  README.txt  S32K144_64_flash.ld
DC2017_S32/Inc/: MK63F12.h  system_MK63F12.h
DC2017_S32/src/: startup_S32K144.S
DC2017_S32/src/Generated_Code/: Cpu.c  Cpu.h  canCom1.c  canCom1.h  canCom2.c  canCom2.h  canCom3.c  canCom3.h  clockMan1.c  clockMan1.h  crc1.c  crc1.h  csec1.c  csec1.h  dmaController1.c  dmaController1.h  flexTimer1.c  flexTimer1.h  lpspiCom1.c  lpspiCom1.h  lpuart1.c  lpuart1.h  osif1.c  osif1.h  pin_mux.c  pin_mux.h  pwrMan1.c  pwrMan1.h
DC2017_S32/src/SDK/platform/devices/: devassert.h  device_registers.h  startup.c  startup.h  status.h
DC2017_S32/src/SDK/platform/devices/S32K144/include/: S32K144.h  S32K144_features.h
DC2017_S32/src/SDK/platform/devices/common/: s32_core_cm4.h
DC2017_S32/src/SDK/platform/drivers/inc/: clock_manager.h  crc_driver.h  csec_driver.h  edma_driver.h  flexcan_driver.h  ftm_driver.h  interrupt_manager.h  lpspi_master_driver.h  lpspi_shared_function.h  lpspi_slave_driver.h  lpuart_driver.h  pins_driver.h  power_manager.h
DC2017_S32/src/SDK/platform/hal/inc/: crc_hal.h  csec_hal.h  dmamux_hal.h  edma_hal.h  flexcan_hal.h  ftm_hal.h  gpio_hal.h  lpspi_hal.h  lpuart_hal.h  pcc_hal.h  pmc_hal.h  port_hal.h  rcm_hal.h  scg_hal.h  sim_hal.h  smc_hal.h
DC2017_S32/src/SDK/rtos/osif/: osif.h  osif_baremetal.c
DC2017_S32/src/Sources/: main.c
(+51 files in other folders)
