cmake_minimum_required(VERSION 3.5)
project(DC2017)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")

link_directories(${CMAKE_SOURCE_DIR})

include(DC2017.cmake)
#add_definitions(-DCMAKE_TOOLCHAIN_FILE=DC2017.cmake)

include_directories(Src/lwip_2.0.0/port)
include_directories(Src/lwip_2.0.0/src/include)
include_directories(Src/lwip_2.0.0/src/include/lwip)
include_directories(Src/lwip_2.0.0/contrib/apps)
include_directories(Src/drivers)
include_directories(Src/CMSIS)
include_directories(Src/source)
include_directories(Src/include)
include_directories(Src/freertos)
include_directories(Src/utilities)
include_directories(Src/led)
include_directories(Src/oled)
include_directories(Src/accel)
include_directories(Src/power)
include_directories(Src/can)
include_directories(Src/enet)
include_directories(Src/sdcard)
include_directories(Src/sdcard/fatfs_0.12b/src)
include_directories(Src/sdcard/fatfs_0.12b/src/fsl_sd_disk)
include_directories(Src/sdcard/sdmmc_2.1.2/inc)
include_directories(Src/usb/stack/include)
include_directories(Src/usb/stack/osa)
include_directories(Src/usb/stack/device)
include_directories(Src/usb/class)

#file(GLOB_RECURSE USER_SOURCES "Src/*.c")
set(COMMON_USER_SOURCES
Src/accel/accel.c
Src/can/can.c
Src/CMSIS/system_MK63F12.c
Src/drivers/fsl_adc16.c
Src/drivers/fsl_clock.c
Src/drivers/fsl_cmp.c
Src/drivers/fsl_cmt.c
Src/drivers/fsl_common.c
Src/drivers/fsl_crc.c
Src/drivers/fsl_dac.c
Src/drivers/fsl_dmamux.c
Src/drivers/fsl_dspi.c
Src/drivers/fsl_dspi_edma.c
Src/drivers/fsl_dspi_freertos.c
Src/drivers/fsl_edma.c
Src/drivers/fsl_enet.c
Src/drivers/fsl_ewm.c
Src/drivers/fsl_flash.c
Src/drivers/fsl_flexbus.c
Src/drivers/fsl_flexcan.c
Src/drivers/fsl_ftm.c
Src/drivers/fsl_gpio.c
Src/drivers/fsl_i2c.c
Src/drivers/fsl_i2c_freertos.c
Src/drivers/fsl_llwu.c
Src/drivers/fsl_lptmr.c
Src/drivers/fsl_pdb.c
Src/drivers/fsl_pit.c
Src/drivers/fsl_pmc.c
Src/drivers/fsl_rcm.c
Src/drivers/fsl_rnga.c
Src/drivers/fsl_rtc.c
Src/drivers/fsl_sai.c
Src/drivers/fsl_sdhc.c
Src/drivers/fsl_sim.c
Src/drivers/fsl_smc.c
Src/drivers/fsl_sysmpu.c
Src/drivers/fsl_uart.c
Src/drivers/fsl_uart_freertos.c
Src/drivers/fsl_vref.c
Src/drivers/fsl_wdog.c
Src/enet/fsl_phy.c
Src/enet/lwip_tcpecho_freertos.c
Src/freertos/croutine.c
Src/freertos/event_groups.c
Src/freertos/fsl_tickless_lptmr.c
Src/freertos/fsl_tickless_systick.c
Src/freertos/heap_3.c
Src/freertos/list.c
Src/freertos/port.c
Src/freertos/queue.c
Src/freertos/tasks.c
Src/freertos/timers.c
Src/led/led.c
Src/lwip_2.0.0/contrib/apps/ping/ping.c
Src/lwip_2.0.0/port/ethernetif.c
Src/lwip_2.0.0/port/sys_arch.c
Src/lwip_2.0.0/src/api/api_lib.c
Src/lwip_2.0.0/src/api/api_msg.c
Src/lwip_2.0.0/src/api/err.c
Src/lwip_2.0.0/src/api/netbuf.c
Src/lwip_2.0.0/src/api/netdb.c
Src/lwip_2.0.0/src/api/netifapi.c
Src/lwip_2.0.0/src/api/sockets.c
Src/lwip_2.0.0/src/api/tcpip.c
Src/lwip_2.0.0/src/core/def.c
Src/lwip_2.0.0/src/core/dns.c
Src/lwip_2.0.0/src/core/inet_chksum.c
Src/lwip_2.0.0/src/core/init.c
Src/lwip_2.0.0/src/core/ip.c
Src/lwip_2.0.0/src/core/ipv4/autoip.c
Src/lwip_2.0.0/src/core/ipv4/dhcp.c
Src/lwip_2.0.0/src/core/ipv4/etharp.c
Src/lwip_2.0.0/src/core/ipv4/icmp.c
Src/lwip_2.0.0/src/core/ipv4/igmp.c
Src/lwip_2.0.0/src/core/ipv4/ip4.c
Src/lwip_2.0.0/src/core/ipv4/ip4_addr.c
Src/lwip_2.0.0/src/core/ipv4/ip4_frag.c
Src/lwip_2.0.0/src/core/ipv6/dhcp6.c
Src/lwip_2.0.0/src/core/ipv6/ethip6.c
Src/lwip_2.0.0/src/core/ipv6/icmp6.c
Src/lwip_2.0.0/src/core/ipv6/inet6.c
Src/lwip_2.0.0/src/core/ipv6/ip6.c
Src/lwip_2.0.0/src/core/ipv6/ip6_addr.c
Src/lwip_2.0.0/src/core/ipv6/ip6_frag.c
Src/lwip_2.0.0/src/core/ipv6/mld6.c
Src/lwip_2.0.0/src/core/ipv6/nd6.c
Src/lwip_2.0.0/src/core/mem.c
Src/lwip_2.0.0/src/core/memp.c
Src/lwip_2.0.0/src/core/netif.c
Src/lwip_2.0.0/src/core/pbuf.c
Src/lwip_2.0.0/src/core/raw.c
Src/lwip_2.0.0/src/core/stats.c
Src/lwip_2.0.0/src/core/sys.c
Src/lwip_2.0.0/src/core/tcp.c
Src/lwip_2.0.0/src/core/tcp_in.c
Src/lwip_2.0.0/src/core/tcp_out.c
Src/lwip_2.0.0/src/core/timeouts.c
Src/lwip_2.0.0/src/core/udp.c
Src/lwip_2.0.0/src/netif/ethernet.c
Src/lwip_2.0.0/src/netif/lowpan6.c
Src/lwip_2.0.0/src/netif/ppp/auth.c
Src/lwip_2.0.0/src/netif/ppp/ccp.c
Src/lwip_2.0.0/src/netif/ppp/chap-md5.c
Src/lwip_2.0.0/src/netif/ppp/chap-new.c
Src/lwip_2.0.0/src/netif/ppp/chap_ms.c
Src/lwip_2.0.0/src/netif/ppp/demand.c
Src/lwip_2.0.0/src/netif/ppp/eap.c
Src/lwip_2.0.0/src/netif/ppp/eui64.c
Src/lwip_2.0.0/src/netif/ppp/fsm.c
Src/lwip_2.0.0/src/netif/ppp/ipcp.c
Src/lwip_2.0.0/src/netif/ppp/ipv6cp.c
Src/lwip_2.0.0/src/netif/ppp/lcp.c
Src/lwip_2.0.0/src/netif/ppp/lwip_ecp.c
Src/lwip_2.0.0/src/netif/ppp/magic.c
Src/lwip_2.0.0/src/netif/ppp/mppe.c
Src/lwip_2.0.0/src/netif/ppp/multilink.c
Src/lwip_2.0.0/src/netif/ppp/ppp.c
Src/lwip_2.0.0/src/netif/ppp/pppapi.c
Src/lwip_2.0.0/src/netif/ppp/pppcrypt.c
Src/lwip_2.0.0/src/netif/ppp/pppoe.c
Src/lwip_2.0.0/src/netif/ppp/pppol2tp.c
Src/lwip_2.0.0/src/netif/ppp/pppos.c
Src/lwip_2.0.0/src/netif/ppp/upap.c
Src/lwip_2.0.0/src/netif/ppp/utils.c
Src/lwip_2.0.0/src/netif/ppp/vj.c
Src/lwip_2.0.0/src/netif/slipif.c
Src/oled/font_large.c
Src/oled/font_medium.c
Src/oled/font_small.c
Src/oled/graphics.c
Src/oled/oled.c
Src/power/power.c
Src/sdcard/event.c
Src/sdcard/fatfs_0.12b/src/diskio.c
Src/sdcard/fatfs_0.12b/src/ff.c
Src/sdcard/fatfs_0.12b/src/fsl_sd_disk/fsl_sd_disk.c
Src/sdcard/fsl_host.c
Src/sdcard/sdcard_fatfs.c
Src/sdcard/sdmmc_2.1.2/src/fsl_sd.c
Src/sdcard/sdmmc_2.1.2/src/fsl_sdmmc.c
Src/source/board.c
Src/source/clock_config.c
Src/source/DC2017.c
Src/source/pin_mux.c
Src/startup/startup_mk63f12.c
Src/usb/class/usb_device_cdc_acm.c
Src/usb/class/usb_device_ch9.c
Src/usb/class/usb_device_descriptor.c
Src/usb/class/virtual_com.c
Src/usb/stack/device/usb_device_dci.c
Src/usb/stack/device/usb_device_khci.c
Src/usb/stack/osa/usb_osa_bm.c
Src/utilities/fsl_debug_console.c
Src/utilities/stdio_emb.c
)

#file(GLOB_RECURSE USER_INCLUDES "Src/*.h")
set(COMMON_USER_INCLUDES
Src/accel/accel.h
Src/can/can.h
Src/CMSIS/arm_common_tables.h
Src/CMSIS/arm_const_structs.h
Src/CMSIS/arm_math.h
Src/CMSIS/cmsis_armcc.h
Src/CMSIS/cmsis_armcc_V6.h
Src/CMSIS/cmsis_gcc.h
Src/CMSIS/core_cm4.h
Src/CMSIS/core_cmFunc.h
Src/CMSIS/core_cmInstr.h
Src/CMSIS/core_cmSimd.h
Src/CMSIS/fsl_device_registers.h
Src/CMSIS/MK63F12.h
Src/CMSIS/MK63F12_features.h
Src/CMSIS/system_MK63F12.h
Src/drivers/fsl_adc16.h
Src/drivers/fsl_clock.h
Src/drivers/fsl_cmp.h
Src/drivers/fsl_cmt.h
Src/drivers/fsl_common.h
Src/drivers/fsl_crc.h
Src/drivers/fsl_dac.h
Src/drivers/fsl_dmamux.h
Src/drivers/fsl_dspi.h
Src/drivers/fsl_dspi_edma.h
Src/drivers/fsl_dspi_freertos.h
Src/drivers/fsl_edma.h
Src/drivers/fsl_enet.h
Src/drivers/fsl_ewm.h
Src/drivers/fsl_flash.h
Src/drivers/fsl_flexbus.h
Src/drivers/fsl_flexcan.h
Src/drivers/fsl_ftm.h
Src/drivers/fsl_gpio.h
Src/drivers/fsl_i2c.h
Src/drivers/fsl_i2c_freertos.h
Src/drivers/fsl_llwu.h
Src/drivers/fsl_lptmr.h
Src/drivers/fsl_pdb.h
Src/drivers/fsl_pit.h
Src/drivers/fsl_pmc.h
Src/drivers/fsl_port.h
Src/drivers/fsl_rcm.h
Src/drivers/fsl_rnga.h
Src/drivers/fsl_rtc.h
Src/drivers/fsl_sai.h
Src/drivers/fsl_sdhc.h
Src/drivers/fsl_sim.h
Src/drivers/fsl_smc.h
Src/drivers/fsl_sysmpu.h
Src/drivers/fsl_uart.h
Src/drivers/fsl_uart_freertos.h
Src/drivers/fsl_vref.h
Src/drivers/fsl_wdog.h
Src/enet/fsl_phy.h
Src/freertos/croutine.h
Src/freertos/deprecated_definitions.h
Src/freertos/event_groups.h
Src/freertos/FreeRTOS.h
Src/freertos/freertos_tasks_c_additions.h
Src/freertos/FreeRTOSConfig.h
Src/freertos/fsl_tickless_generic.h
Src/freertos/list.h
Src/freertos/mpu_prototypes.h
Src/freertos/mpu_wrappers.h
Src/freertos/portable.h
Src/freertos/portmacro.h
Src/freertos/projdefs.h
Src/freertos/queue.h
Src/freertos/semphr.h
Src/freertos/StackMacros.h
Src/freertos/task.h
Src/freertos/timers.h
Src/include/cpu.h
Src/include/datatypes.h
Src/led/led.h
Src/lwip_2.0.0/contrib/apps/chargen/chargen.h
Src/lwip_2.0.0/contrib/apps/httpserver/httpserver-netconn.h
Src/lwip_2.0.0/contrib/apps/netio/netio.h
Src/lwip_2.0.0/contrib/apps/ping/ping.h
Src/lwip_2.0.0/contrib/apps/rtp/rtp.h
Src/lwip_2.0.0/contrib/apps/rtp/rtpdata.h
Src/lwip_2.0.0/contrib/apps/shell/shell.h
Src/lwip_2.0.0/contrib/apps/smtp/smtp.h
Src/lwip_2.0.0/contrib/apps/snmp_private_mib/private_mib.h
Src/lwip_2.0.0/contrib/apps/socket_examples/socket_examples.h
Src/lwip_2.0.0/contrib/apps/tcpecho/tcpecho.h
Src/lwip_2.0.0/contrib/apps/tcpecho_raw/tcpecho_raw.h
Src/lwip_2.0.0/contrib/apps/udpecho/udpecho.h
Src/lwip_2.0.0/contrib/apps/udpecho_raw/udpecho_raw.h
Src/lwip_2.0.0/port/arch/cc.h
Src/lwip_2.0.0/port/arch/perf.h
Src/lwip_2.0.0/port/arch/sys_arch.h
Src/lwip_2.0.0/port/ethernetif.h
Src/lwip_2.0.0/port/lwipopts.h
Src/lwip_2.0.0/src/apps/httpd/fsdata.h
Src/lwip_2.0.0/src/apps/httpd/httpd_structs.h
Src/lwip_2.0.0/src/apps/httpsrv/httpsrv.h
Src/lwip_2.0.0/src/apps/httpsrv/httpsrv_base64.h
Src/lwip_2.0.0/src/apps/httpsrv/httpsrv_config.h
Src/lwip_2.0.0/src/apps/httpsrv/httpsrv_fs.h
Src/lwip_2.0.0/src/apps/httpsrv/httpsrv_port.h
Src/lwip_2.0.0/src/apps/httpsrv/httpsrv_prv.h
Src/lwip_2.0.0/src/apps/httpsrv/httpsrv_script.h
Src/lwip_2.0.0/src/apps/httpsrv/httpsrv_sha1.h
Src/lwip_2.0.0/src/apps/httpsrv/httpsrv_supp.h
Src/lwip_2.0.0/src/apps/httpsrv/httpsrv_tls.h
Src/lwip_2.0.0/src/apps/httpsrv/httpsrv_utf8.h
Src/lwip_2.0.0/src/apps/httpsrv/httpsrv_ws.h
Src/lwip_2.0.0/src/apps/httpsrv/httpsrv_ws_prv.h
Src/lwip_2.0.0/src/apps/snmp/snmp_asn1.h
Src/lwip_2.0.0/src/apps/snmp/snmp_core_priv.h
Src/lwip_2.0.0/src/apps/snmp/snmp_msg.h
Src/lwip_2.0.0/src/apps/snmp/snmp_pbuf_stream.h
Src/lwip_2.0.0/src/apps/snmp/snmpv3_priv.h
Src/lwip_2.0.0/src/include/lwip/api.h
Src/lwip_2.0.0/src/include/lwip/apps/fs.h
Src/lwip_2.0.0/src/include/lwip/apps/httpd.h
Src/lwip_2.0.0/src/include/lwip/apps/httpd_opts.h
Src/lwip_2.0.0/src/include/lwip/apps/lwiperf.h
Src/lwip_2.0.0/src/include/lwip/apps/mdns.h
Src/lwip_2.0.0/src/include/lwip/apps/mdns_priv.h
Src/lwip_2.0.0/src/include/lwip/apps/netbiosns.h
Src/lwip_2.0.0/src/include/lwip/apps/snmp.h
Src/lwip_2.0.0/src/include/lwip/apps/snmp_core.h
Src/lwip_2.0.0/src/include/lwip/apps/snmp_mib2.h
Src/lwip_2.0.0/src/include/lwip/apps/snmp_opts.h
Src/lwip_2.0.0/src/include/lwip/apps/snmp_scalar.h
Src/lwip_2.0.0/src/include/lwip/apps/snmp_table.h
Src/lwip_2.0.0/src/include/lwip/apps/snmp_threadsync.h
Src/lwip_2.0.0/src/include/lwip/apps/snmpv3.h
Src/lwip_2.0.0/src/include/lwip/apps/sntp.h
Src/lwip_2.0.0/src/include/lwip/apps/sntp_opts.h
Src/lwip_2.0.0/src/include/lwip/apps/tftp_opts.h
Src/lwip_2.0.0/src/include/lwip/apps/tftp_server.h
Src/lwip_2.0.0/src/include/lwip/arch.h
Src/lwip_2.0.0/src/include/lwip/autoip.h
Src/lwip_2.0.0/src/include/lwip/debug.h
Src/lwip_2.0.0/src/include/lwip/def.h
Src/lwip_2.0.0/src/include/lwip/dhcp.h
Src/lwip_2.0.0/src/include/lwip/dhcp6.h
Src/lwip_2.0.0/src/include/lwip/dns.h
Src/lwip_2.0.0/src/include/lwip/err.h
Src/lwip_2.0.0/src/include/lwip/errno.h
Src/lwip_2.0.0/src/include/lwip/etharp.h
Src/lwip_2.0.0/src/include/lwip/ethip6.h
Src/lwip_2.0.0/src/include/lwip/icmp.h
Src/lwip_2.0.0/src/include/lwip/icmp6.h
Src/lwip_2.0.0/src/include/lwip/igmp.h
Src/lwip_2.0.0/src/include/lwip/inet.h
Src/lwip_2.0.0/src/include/lwip/inet_chksum.h
Src/lwip_2.0.0/src/include/lwip/init.h
Src/lwip_2.0.0/src/include/lwip/ip.h
Src/lwip_2.0.0/src/include/lwip/ip4.h
Src/lwip_2.0.0/src/include/lwip/ip4_addr.h
Src/lwip_2.0.0/src/include/lwip/ip4_frag.h
Src/lwip_2.0.0/src/include/lwip/ip6.h
Src/lwip_2.0.0/src/include/lwip/ip6_addr.h
Src/lwip_2.0.0/src/include/lwip/ip6_frag.h
Src/lwip_2.0.0/src/include/lwip/ip_addr.h
Src/lwip_2.0.0/src/include/lwip/mem.h
Src/lwip_2.0.0/src/include/lwip/memp.h
Src/lwip_2.0.0/src/include/lwip/mld6.h
Src/lwip_2.0.0/src/include/lwip/nd6.h
Src/lwip_2.0.0/src/include/lwip/netbuf.h
Src/lwip_2.0.0/src/include/lwip/netdb.h
Src/lwip_2.0.0/src/include/lwip/netif.h
Src/lwip_2.0.0/src/include/lwip/netifapi.h
Src/lwip_2.0.0/src/include/lwip/opt.h
Src/lwip_2.0.0/src/include/lwip/pbuf.h
Src/lwip_2.0.0/src/include/lwip/priv/api_msg.h
Src/lwip_2.0.0/src/include/lwip/priv/memp_priv.h
Src/lwip_2.0.0/src/include/lwip/priv/memp_std.h
Src/lwip_2.0.0/src/include/lwip/priv/tcp_priv.h
Src/lwip_2.0.0/src/include/lwip/priv/tcpip_priv.h
Src/lwip_2.0.0/src/include/lwip/prot/autoip.h
Src/lwip_2.0.0/src/include/lwip/prot/dhcp.h
Src/lwip_2.0.0/src/include/lwip/prot/dns.h
Src/lwip_2.0.0/src/include/lwip/prot/etharp.h
Src/lwip_2.0.0/src/include/lwip/prot/ethernet.h
Src/lwip_2.0.0/src/include/lwip/prot/icmp.h
Src/lwip_2.0.0/src/include/lwip/prot/icmp6.h
Src/lwip_2.0.0/src/include/lwip/prot/igmp.h
Src/lwip_2.0.0/src/include/lwip/prot/ip.h
Src/lwip_2.0.0/src/include/lwip/prot/ip4.h
Src/lwip_2.0.0/src/include/lwip/prot/ip6.h
Src/lwip_2.0.0/src/include/lwip/prot/mld6.h
Src/lwip_2.0.0/src/include/lwip/prot/nd6.h
Src/lwip_2.0.0/src/include/lwip/prot/tcp.h
Src/lwip_2.0.0/src/include/lwip/prot/udp.h
Src/lwip_2.0.0/src/include/lwip/raw.h
Src/lwip_2.0.0/src/include/lwip/sio.h
Src/lwip_2.0.0/src/include/lwip/snmp.h
Src/lwip_2.0.0/src/include/lwip/sockets.h
Src/lwip_2.0.0/src/include/lwip/stats.h
Src/lwip_2.0.0/src/include/lwip/sys.h
Src/lwip_2.0.0/src/include/lwip/tcp.h
Src/lwip_2.0.0/src/include/lwip/tcpip.h
Src/lwip_2.0.0/src/include/lwip/timeouts.h
Src/lwip_2.0.0/src/include/lwip/udp.h
Src/lwip_2.0.0/src/include/netif/etharp.h
Src/lwip_2.0.0/src/include/netif/ethernet.h
Src/lwip_2.0.0/src/include/netif/lowpan6.h
Src/lwip_2.0.0/src/include/netif/lowpan6_opts.h
Src/lwip_2.0.0/src/include/netif/ppp/ccp.h
Src/lwip_2.0.0/src/include/netif/ppp/chap-md5.h
Src/lwip_2.0.0/src/include/netif/ppp/chap-new.h
Src/lwip_2.0.0/src/include/netif/ppp/chap_ms.h
Src/lwip_2.0.0/src/include/netif/ppp/eap.h
Src/lwip_2.0.0/src/include/netif/ppp/ecp.h
Src/lwip_2.0.0/src/include/netif/ppp/eui64.h
Src/lwip_2.0.0/src/include/netif/ppp/fsm.h
Src/lwip_2.0.0/src/include/netif/ppp/ipcp.h
Src/lwip_2.0.0/src/include/netif/ppp/ipv6cp.h
Src/lwip_2.0.0/src/include/netif/ppp/lcp.h
Src/lwip_2.0.0/src/include/netif/ppp/magic.h
Src/lwip_2.0.0/src/include/netif/ppp/mppe.h
Src/lwip_2.0.0/src/include/netif/ppp/polarssl/arc4.h
Src/lwip_2.0.0/src/include/netif/ppp/polarssl/des.h
Src/lwip_2.0.0/src/include/netif/ppp/polarssl/md4.h
Src/lwip_2.0.0/src/include/netif/ppp/polarssl/md5.h
Src/lwip_2.0.0/src/include/netif/ppp/polarssl/sha1.h
Src/lwip_2.0.0/src/include/netif/ppp/ppp.h
Src/lwip_2.0.0/src/include/netif/ppp/ppp_impl.h
Src/lwip_2.0.0/src/include/netif/ppp/ppp_opts.h
Src/lwip_2.0.0/src/include/netif/ppp/pppapi.h
Src/lwip_2.0.0/src/include/netif/ppp/pppcrypt.h
Src/lwip_2.0.0/src/include/netif/ppp/pppdebug.h
Src/lwip_2.0.0/src/include/netif/ppp/pppoe.h
Src/lwip_2.0.0/src/include/netif/ppp/pppol2tp.h
Src/lwip_2.0.0/src/include/netif/ppp/pppos.h
Src/lwip_2.0.0/src/include/netif/ppp/upap.h
Src/lwip_2.0.0/src/include/netif/ppp/vj.h
Src/lwip_2.0.0/src/include/netif/slipif.h
Src/lwip_2.0.0/src/include/posix/errno.h
Src/lwip_2.0.0/src/include/posix/netdb.h
Src/lwip_2.0.0/src/include/posix/sys/socket.h
Src/oled/graphics.h
Src/oled/oled.h
Src/oled/resources.h
Src/power/power.h
Src/sdcard/fatfs_0.12b/src/diskio.h
Src/sdcard/fatfs_0.12b/src/ff.h
Src/sdcard/fatfs_0.12b/src/fsl_sd_disk/fsl_sd_disk.h
Src/sdcard/fatfs_0.12b/src/integer.h
Src/sdcard/ffconf.h
Src/sdcard/sdmmc_2.1.2/inc/fsl_card.h
Src/sdcard/sdmmc_2.1.2/inc/fsl_host.h
Src/sdcard/sdmmc_2.1.2/inc/fsl_sdmmc.h
Src/sdcard/sdmmc_2.1.2/inc/fsl_specification.h
Src/source/board.h
Src/source/clock_config.h
Src/source/pin_mux.h
Src/usb/class/usb_device_cdc_acm.h
Src/usb/class/usb_device_ch9.h
Src/usb/class/usb_device_config.h
Src/usb/class/usb_device_descriptor.h
Src/usb/class/virtual_com.h
Src/usb/stack/device/usb_device.h
Src/usb/stack/device/usb_device_dci.h
Src/usb/stack/device/usb_device_khci.h
Src/usb/stack/include/usb.h
Src/usb/stack/include/usb_khci.h
Src/usb/stack/include/usb_misc.h
Src/usb/stack/include/usb_spec.h
Src/usb/stack/osa/usb_osa.h
Src/usb/stack/osa/usb_osa_bm.h
Src/usb/stack/osa/usb_osa_freertos.h
Src/utilities/fsl_debug_console.h
Src/utilities/stdio_emb.h
)

set(DC2017_SOURCES
        Src/demos/dc2017/dc2017_main.c
        Src/demos/dc2017/resources/bat_25.c
        Src/demos/dc2017/resources/bat_50.c
        Src/demos/dc2017/resources/bat_75.c
        Src/demos/dc2017/resources/bat_chrg.c
        Src/demos/dc2017/resources/bat_empty.c
        Src/demos/dc2017/resources/bat_full.c
        Src/demos/dc2017/resources/NXP.c
        Src/demos/dc2017/resources/rapid7.c
        )

set(EOL_SOURCES
        Src/demos/EOL/eol.c
        )

add_executable(DC2017.elf ${COMMON_USER_SOURCES} ${COMMON_USER_INCLUDES} ${DC2017_SOURCES} ${LINKER_SCRIPT})
#add_executable(EOL.elf ${COMMON_USER_SOURCES} ${COMMON_USER_INCLUDES} ${EOL_SOURCES} ${LINKER_SCRIPT})



#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Map=${PROJECT_SOURCE_DIR}/build/${PROJECT_NAME}.map")
set(HEX_FILE ${PROJECT_SOURCE_DIR}/bin/${PROJECT_NAME}.hex)
set(BIN_FILE ${PROJECT_SOURCE_DIR}/bin/${PROJECT_NAME}.bin)
add_custom_command(TARGET ${PROJECT_NAME}.elf POST_BUILD
        COMMAND ${CMAKE_OBJCOPY} -Oihex $<TARGET_FILE:${PROJECT_NAME}.elf> ${HEX_FILE}
        COMMENT "Building ${HEX_FILE}"
#        COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:${PROJECT_NAME}.elf> ${BIN_FILE}
#        COMMENT "Building ${HEX_FILE} \nBuilding ${BIN_FILE}")
)